manifests/tenants/cyphria/data_pipeline_llm_summary/network-policy/egress-to-kube-dns.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cyphria-data-ingestion-to-kube-dns-access
  namespace: cyphria-data-pipeline
  annotations:
    kubernetes.io/description: data ingestion can send requests to kube dns for dns lookups to see if its openai.com
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cyphria-data-ingestion
      io.kubernetes.pod.namespace: cyphria-data-pipeline
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
