manifests/tenants/cyphria/data_pipeline_llm_summary/network-policy/ingress-from-airflow.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cyphria-data-ingestion-from-airflow-access
  namespace: cyphria-data-pipeline
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cyphria-data-ingestion
      io.kubernetes.pod.namespace: cyphria-data-pipeline
  ingress:
    # insights llm summary <- airflow
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: airflow
      toPorts:
        - ports:
            - port: 8000
              protocol: TCP
